PA_Education/TestMenifest/force-app/main/default/objects/ProjectCareer__c/ProjectCareer__c.object-meta.xml
<CustomObject>
    <label>프로젝트 경력</label>
    <nameField>
        <label>[고객사명] 프로젝트명</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>