PA_Education/TestMenifest/force-app/main/default/objects/ProjectCareer__c/fields/CareerClient__c.field-meta.xml
<CustomField>
    <fullName>CareerClient__c</fullName>
    <label>발주사명</label>
    <length>50</length>
    <type>Text</type>
</CustomField>