PA_Education/TestMenifest/force-app/main/default/objects/ProjectCareer__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>사원 명</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>프로젝트 경력</relationshipLabel>
    <relationshipName>Re_Project_Career</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>