PA_Education/TestMenifest/force-app/main/default/objects/ProjectCareer__c/fields/ExitDate__c.field-meta.xml
<CustomField>
    <fullName>ExitDate__c</fullName>
    <label>철수일자</label>
    <type>Date</type>
</CustomField>