PA_Education/TestMenifest/force-app/main/default/objects/ProjectCareer__c/fields/fm_Date__c.field-meta.xml
<CustomField>
    <fullName>fm_Date__c</fullName>
    <formula>text( InputDate__c ) &amp; &quot; ~ &quot; &amp; text( ExitDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>수행 기간</label>
    <type>Text</type>
</CustomField>