PA_Education/TestMenifest/force-app/main/default/objects/ProjectCareer__c/fields/Industrial_Classification__c.field-meta.xml
<CustomField>
    <fullName>Industrial_Classification__c</fullName>
    <description>이전 회사에서 진행한 프로젝트의 산업분류를 확인하고자 함</description>
    <label>산업분류</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F&amp;B</fullName>
            </value>
            <value>
                <fullName>IT소프트웨어</fullName>
            </value>
            <value>
                <fullName>건설</fullName>
            </value>
            <value>
                <fullName>공공/사회기반시설</fullName>
            </value>
            <value>
                <fullName>관광/숙박</fullName>
            </value>
            <value>
                <fullName>교육</fullName>
            </value>
            <value>
                <fullName>금융</fullName>
            </value>
            <value>
                <fullName>농업/임업/축산</fullName>
            </value>
            <value>
                <fullName>미디어/엔터테인먼트/출판/영화</fullName>
            </value>
            <value>
                <fullName>바이오/생명과학</fullName>
            </value>
            <value>
                <fullName>반도체</fullName>
            </value>
            <value>
                <fullName>부동산</fullName>
            </value>
            <value>
                <fullName>비영리</fullName>
            </value>
            <value>
                <fullName>에너지</fullName>
            </value>
            <value>
                <fullName>엔지니어링</fullName>
            </value>
            <value>
                <fullName>예술/스포츠</fullName>
            </value>
            <value>
                <fullName>운송</fullName>
            </value>
            <value>
                <fullName>유통/리테일</fullName>
            </value>
            <value>
                <fullName>의료/보건</fullName>
            </value>
            <value>
                <fullName>의류/섬유</fullName>
            </value>
            <value>
                <fullName>의약/제약</fullName>
            </value>
            <value>
                <fullName>자동차/모빌리티</fullName>
            </value>
            <value>
                <fullName>전자</fullName>
            </value>
            <value>
                <fullName>정보통신</fullName>
            </value>
            <value>
                <fullName>제조</fullName>
            </value>
            <value>
                <fullName>컨설팅</fullName>
            </value>
            <value>
                <fullName>헬스케어</fullName>
            </value>
            <value>
                <fullName>화학</fullName>
            </value>
            <value>
                <fullName>환경/재생에너지</fullName>
            </value>
            <value>
                <fullName>뷰티</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>