PA_Education/TestMenifest/force-app/main/default/objects/ProjectCareer__c/fields/InputDate__c.field-meta.xml
<CustomField>
    <fullName>InputDate__c</fullName>
    <label>투입일자</label>
    <type>Date</type>
</CustomField>