PA_Education/TestMenifest/force-app/main/default/objects/ProjectCareer__c/fields/PriorAccountName__c.field-meta.xml
<CustomField>
    <fullName>PriorAccountName__c</fullName>
    <label>소속사명</label>
    <length>50</length>
    <type>Text</type>
</CustomField>