PA_Education/TestMenifest/force-app/main/default/objects/ProjectCareer__c/fields/ProjectSummary__c.field-meta.xml
<CustomField>
    <fullName>ProjectSummary__c</fullName>
    <label>프로젝트 개요</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>