PA_Education/TestMenifest/force-app/main/default/objects/ProjectCareer__c/fields/Salesforce_Product__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Product__c</fullName>
    <description>이전회사에서 세일즈포스 프로젝트를 참여했을 시 사용한 제품을 확인하고자 함</description>
    <inlineHelpText>Salesforce 프로젝트를 진행 했을 경우 선택</inlineHelpText>
    <label>Salesforce 제품분류</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
            <value>
                <fullName>MuleSoft</fullName>
            </value>
            <value>
                <fullName>Salesforce Platform</fullName>
            </value>
            <value>
                <fullName>Net Zero Cloud</fullName>
            </value>
            <value>
                <fullName>Nonprofit Cloud</fullName>
            </value>
            <value>
                <fullName>Experience Cloud</fullName>
            </value>
            <value>
                <fullName>직접입력</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>