PA_Education/TestMenifest/force-app/main/default/objects/ProjectCareer__c/fields/Typein_Salesforce_Industry__c.field-meta.xml
<CustomField>
    <fullName>Typein_Salesforce_Industry__c</fullName>
    <description>Salesforce 산업분류 값중 직접입력을 선택 했을시 입력하는 필드</description>
    <label>직접입력(SF산업분류)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>