PA_Education/TestMenifest/force-app/main/default/objects/ProjectCareer__c/fields/WorkDescription__c.field-meta.xml
<CustomField>
    <fullName>WorkDescription__c</fullName>
    <label>담당 업무</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>