PA_Education/TestMenifest/force-app/main/default/objects/ProjectCareer__c/validationRules/Industrial_Classification_ValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>Industrial_Classification_ValidationRule</fullName>
    <active>true</active>
    <description>산업분류 값중 직접입력을 선택했을때 반드시 직접입력(산업분류) 필드에 값을 입력해야함</description>
    <errorConditionFormula>IF(
				AND(
								ISPICKVAL(Industrial_Classification__c, &apos;직접입력&apos;),
								ISBLANK(Typein_Industrial_Classification__c)
								),
				TRUE, FALSE
				)</errorConditionFormula>
    <errorDisplayField>Typein_Industrial_Classification__c</errorDisplayField>
    <errorMessage>값을 입력해주세요.</errorMessage>
</ValidationRule>