PA_Education/TestMenifest/force-app/main/default/objects/ProjectCareer__c/validationRules/Salesforce_Product_ValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>Salesforce_Product_ValidationRule</fullName>
    <active>true</active>
    <description>Salesforce 제품분류 값중 직접입력을 선택했을때 반드시 직접입력(SF제품분류) 필드에 값을 입력해야함</description>
    <errorConditionFormula>IF(
				AND(
								ISPICKVAL(Salesforce_Product__c, &apos;직접입력&apos;),
								ISBLANK(Typein_Salesforce_Product__c)
								),
				TRUE, FALSE
				)</errorConditionFormula>
    <errorDisplayField>Typein_Salesforce_Product__c</errorDisplayField>
    <errorMessage>값을 입력해주세요.</errorMessage>
</ValidationRule>